tests/init_state/ref_obligations/hll_pointee_obligation_unfulfilled.err.expected
error: at 10:27: [INIT-RefObligationUnfulfilled] In function 'out_never': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
  9 | # &out never written.
 10 | fn out_never(r: &out i64) {
    |              -----------  ^ reference declared here
 11 | }
    |
error: at 15:3: [INIT-RefObligationUnfulfilled] In function 'out_struct_partial': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be initialized before the reference expires
    |
 13 | # &out struct with only one field written; pointee ends Partial.
 14 | fn out_struct_partial(r: &out P) {
    |                       --------- reference declared here
 15 |   r.*.x = 1;
    |   ^^^^^^^^^
 16 | }
    |
error: at 19:33: [INIT-RefObligationUnfulfilled] In function 'drop_untouched': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 18 | # &drop pointee left initialized.
 19 | fn drop_untouched(r: &drop Box) {
    |                   ------------  ^ reference declared here
 20 | }
    |
error: at 23:40: [INIT-RefObligationUnfulfilled] In function 'mut_moved_no_writeback': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 22 | # &mut moved-out with no writeback; pointee ends Uninit.
 23 | fn mut_moved_no_writeback(r: &mut Box) {
    |                           -----------  ^ reference declared here
 24 |   let x = r.*;
    |
error: at 29:3: [INIT-RefObligationUnfulfilled] In function 'uninit_written': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 27 | # &uninit written into as a whole.
 28 | fn uninit_written(r: &uninit i64) {
    |                   -------------- reference declared here
 29 |   r.* = 42;
    |   ^^^^^^^^
 30 | }
    |
error: at 34:3: [INIT-RefObligationUnfulfilled] In function 'uninit_struct_partial': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be consumed before the reference expires
    |
 32 | # &uninit struct with one field written; pointee ends Partial.
 33 | fn uninit_struct_partial(r: &uninit P) {
    |                          ------------ reference declared here
 34 |   r.*.x = 1;
    |   ^^^^^^^^^
 35 | }
    |
error: at 42:15: [INIT-RefObligationUnfulfilled] In function 'loop_out_never_writes': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 40 | # sibling where the loop body writes each iteration and consumes.
 41 | fn loop_out_never_writes(r: &out i64, n: i64) {
    |                          ----------- reference declared here
 42 |   let mut i = 0i64;
    |               ^^^^
 43 |   loop {
    |
error: at 58:4: [INIT-RefObligationUnfulfilled] In function 'maybe_not_drop': reference 'box' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 54 | # land at the missing else side, not at the `if` keyword.
 55 | fn maybe_not_drop(cond: bool, box: &drop Box) {
    |                               -------------- reference declared here
 56 |   if cond {
 57 |     consume_box(box.*);
 58 |   }
    |    ^
 59 | }
    |
error: at 67:9: [INIT-RefObligationUnfulfilled] In function 'defer_ref_obligation': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 64 | # violating the (Init, Uninit) obligation of `&drop`.
 65 | fn defer_ref_obligation(r: &drop Box) {
    |                         ------------ reference declared here
 66 |   let x = r.*;
 67 |   defer r.* = Box { val: 5 };
    |         ^^^^^^^^^^^^^^^^^^^^
 68 | }
    |
