tests/init_state/ref_obligations/hll_pointee_obligation_unfulfilled.si
# HLL counterpart to `pointee_obligation_unfulfilled.sim` — the same
# invariant, exercised through the HLL surface. Every fn fires
# INIT-RefObligationUnfulfilled at return.

struct P: Copy + Drop { x: i64, y: i64 }

struct Box: Drop + Move { val: i64 }

# &out never written.
fn out_never(r: &out i64) {
}

# &out struct with only one field written; pointee ends Partial.
fn out_struct_partial(r: &out P) {
  r.*.x = 1;
}

# &drop pointee left initialized.
fn drop_untouched(r: &drop Box) {
}

# &mut moved-out with no writeback; pointee ends Uninit.
fn mut_moved_no_writeback(r: &mut Box) {
  let x = r.*;
}

# &uninit written into as a whole.
fn uninit_written(r: &uninit i64) {
  r.* = 42;
}

# &uninit struct with one field written; pointee ends Partial.
fn uninit_struct_partial(r: &uninit P) {
  r.*.x = 1;
}

# Loop-carried &out obligation unfulfilled: the loop body counts up
# to `n` but never writes through `r`. At fn return the pointee is
# still Uninit — obligation unfulfilled. Contrasts with the fulfilled
# sibling where the loop body writes each iteration and consumes.
fn loop_out_never_writes(r: &out i64, n: i64) {
  let mut i = 0i64;
  loop {
    if i >= n { break }
    i = i + 1i64;
  }
}

extern fn consume_box(b: Box);

# Asymmetric `&drop` discharge across an `if`: the true arm consumes
# the pointee, the false (implicit else) arm doesn't. `box`'s
# obligation is unfulfilled on the false path — diagnostic should
# land at the missing else side, not at the `if` keyword.
fn maybe_not_drop(cond: bool, box: &drop Box) {
  if cond {
    consume_box(box.*);
  }
}
